--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h2>HTML forms</h2>
+
+	<form action="/action-page.php">
+    	<label for="fname">Primeiro nome:</label><br>
+        <input type="text" id="fname" name="fname" value="Lucas"><br>
+        <label for="lname">Sobrenome:</label><br>
+        <input type="text" id="lname "name="lname" value="Emanuel Rocha"><br>
+        <input type="submit" value="confirm">
+    </form>
+    
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
 </body>
 </html>
