--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>HTML forms</h2>
 
-	<form action="/action-page.php">
+	<form action="">
     	<label for="fname">Primeiro nome:</label><br>
         <input type="text" id="fname" name="fname" value="Lucas"><br>
         <label for="lname">Sobrenome:</label><br>
