--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML forms</h2>
-	<form action="">
+	<form action="teste.html">
     	<label for="fname">Primeiro nome:</label><br>
         <input type="text" id="fname" name="fname" value="Lucas"><br>
         <label for="lname">Sobrenome:</label><br>
